<resources>
    <string name="app_name">Partha_Photography_Final</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_about">About</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_about_">About_Activity</string>
    <string name="title_activity_gallery_">Gallery_Activity</string>

    <string name="title_activity_gallery">Gallery</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_favourite_">Favourite_Activity</string>
    <string name="title_activity_blog_">Blog_Activity</string>
    <string name="title_activity_contact_">Contact_Activity</string>
    <string name="about">ABOUT</string>
    <string name="gallery">GALLERY</string>
    <string name="favourite">FAVOURITE</string>
    <string name="blog">BLOG</string>
    <string name="contact">CONTACT</string>
    <string name="title_activity_example">Example</string>
</resources>
